style: fix faq dark mode hover state

--- a/src/styles/blocks/components/_faq.scss
+++ b/src/styles/blocks/components/_faq.scss
@@ -37,7 +37,7 @@
     align-items: center;
     
     &:hover {
-      color: get-color('secondary');
+      @include apply-theme-color('color', get-color('secondary'), get-color('secondary-glare'));
     }
   }
   
